Private annotations feature: - Check box in editor to mark annotation private to your user. - Displays with a private eye icon in the annotation list - Only visible when logged in as correct user (server side) - Updates annotation list when signing in/out - Adds a preference to create private annotations by default.

--- a/content/loreui.css
+++ b/content/loreui.css
@@ -164,6 +164,13 @@
 	background-repeat: no-repeat;
 }
 
+.anno-icon-private {
+	background-image: url(chrome://lore/skin/icons/eye.png);
+	background-repeat: no-repeat;
+    height: 16px;
+    width: 16px;
+}
+
 
 .x-tree-node .anno-view {
 	height: 16px !important;
